--- a/index.html
+++ b/index.html
@@ -1,41 +1,87 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendrier de réservation Serre-Chevalier</title>
-    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/locales/fr.js"></script>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .calendar-container { margin-bottom: 40px; }
-        #calendar { max-width: 900px; margin: auto; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calendrier des réservations</title>
+  <!-- Lien vers le fichier CSS de FullCalendar -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.2.0/fullcalendar.min.css" rel="stylesheet" />
+  <style>
+    /* Style supplémentaire pour mieux afficher les calendriers */
+    #calendar {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+  </style>
+  <!-- Chargement de la locale française pour FullCalendar -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.2.0/dist/locale/fr.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.2.0/fullcalendar.min.js"></script>
 </head>
 <body>
-    <h2>Calendrier de réservation Serre-Chevalier</h2>
-    <div class="calendar-container" id="calendar"></div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var calendarEl = document.getElementById('calendar');
+  <h1>Calendrier des réservations</h1>
 
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                locale: 'fr', // Langue en français
-                firstDay: 1, // Semaine commence le lundi
-                initialView: 'dayGridMonth',
-                events: [
-                    {
-                        title: 'Réservé - Serre-Chevalier',
-                        start: '2025-04-18',
-                        end: '2025-04-22',
-                        color: 'blue'
-                    }
-                ]
-            });
-            calendar.render();
-        });
-    </script>
+  <!-- Page Serre-Chevalier -->
+  <h2>Calendrier de réservation Serre-Chevalier</h2>
+  <div id="calendar-serre"></div>
+
+  <hr>
+
+  <!-- Page Cavalaire -->
+  <h2>Calendrier de réservation Cavalaire</h2>
+  <div id="calendar-cavalaire"></div>
+
+  <script>
+    $(document).ready(function() {
+      // Initialisation du calendrier pour Serre-Chevalier
+      $('#calendar-serre').fullCalendar({
+        locale: 'fr',  // Langue française
+        header: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'month,agendaWeek,agendaDay'
+        },
+        events: [
+          // Exemple d'événement pour Serre-Chevalier
+          {
+            title: 'Réservation 1',
+            start: '2025-04-10',
+            end: '2025-04-12'
+          },
+          {
+            title: 'Réservation 2',
+            start: '2025-04-15',
+            end: '2025-04-18'
+          }
+        ]
+      });
+
+      // Initialisation du calendrier pour Cavalaire
+      $('#calendar-cavalaire').fullCalendar({
+        locale: 'fr',  // Langue française
+        header: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'month,agendaWeek,agendaDay'
+        },
+        events: [
+          // Exemple d'événement pour Cavalaire
+          {
+            title: 'Réservation 3',
+            start: '2025-04-20',
+            end: '2025-04-22'
+          },
+          {
+            title: 'Réservation 4',
+            start: '2025-04-25',
+            end: '2025-04-27'
+          }
+        ]
+      });
+    });
+  </script>
+
 </body>
 </html>
