--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       max-width: 900px;
       margin: 0 auto;
     }
+
+    /* Centrer et agrandir les titres */
+    h2 {
+      text-align: center;
+      font-size: 2em;  /* Taille du texte augmentée */
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
   </style>
 
   <!-- Chargement de la locale française pour FullCalendar -->
@@ -26,7 +34,7 @@
 </head>
 <body>
 
-  <h1>Calendrier des réservations</h1>
+  <h1 style="text-align: center;">Calendrier des réservations</h1>
 
   <!-- Page Serre-Chevalier -->
   <h2>Calendrier de réservation Serre-Chevalier</h2>
