--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
     /* Centrer et agrandir les titres */
     h2 {
       text-align: center;
-      font-size: 2em;  /* Taille du texte augmentée */
+      font-size: 2.5em;  /* Augmenter encore la taille du texte */
       margin-top: 20px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      font-weight: bold;
+    }
+
+    /* Centrer le titre principal */
+    h1 {
+      text-align: center;
+      font-size: 3em;
+      margin-bottom: 30px;
     }
   </style>
 
@@ -34,7 +42,7 @@
 </head>
 <body>
 
-  <h1 style="text-align: center;">Calendrier des réservations</h1>
+  <h1>Calendrier des réservations</h1>
 
   <!-- Page Serre-Chevalier -->
   <h2>Calendrier de réservation Serre-Chevalier</h2>
