--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     $(document).ready(function() {
       // Initialisation du calendrier pour Serre-Chevalier
       $('#calendar-serre').fullCalendar({
-        locale: 'fr',       // Tout en français
+        locale: 'fr',       // Langue française
         firstDay: 1,        // La semaine commence le lundi
         header: {
           left: 'prev,next today',
@@ -70,7 +70,7 @@
 
       // Initialisation du calendrier pour Cavalaire
       $('#calendar-cavalaire').fullCalendar({
-        locale: 'fr',       // Tout en français
+        locale: 'fr',       // Langue française
         firstDay: 1,        // La semaine commence le lundi
         header: {
           left: 'prev,next today',
