--- a/serre-chevalier.html
+++ b/serre-chevalier.html
@@ -4,38 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendrier de réservation Serre-Chevalier</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.2.0/dist/fullcalendar.min.css">
+
+  <!-- FullCalendar CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@3.0.0/dist/fullcalendar.min.css" rel="stylesheet">
+  
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 20px;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     h1 {
-      font-size: 2em;
-      color: #333;
+      text-align: center;
+      font-size: 2rem;
+      margin-top: 20px;
+      font-weight: bold;
+    }
+    #calendar {
+      width: 90%;
+      margin: 20px 0;
     }
   </style>
 </head>
 <body>
+
+  <!-- Titre du calendrier -->
   <h1>Calendrier de réservation Serre-Chevalier</h1>
+
+  <!-- Le calendrier -->
   <div id="calendar"></div>
 
+  <!-- FullCalendar JS -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.2.0/dist/fullcalendar.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.0.0/dist/fullcalendar.min.js"></script>
+
   <script>
     $(document).ready(function() {
       $('#calendar').fullCalendar({
+        locale: 'fr', // Langue en français
+        firstDay: 1,  // Commence la semaine le lundi
         header: {
           left: 'prev,next today',
           center: 'title',
           right: 'month,agendaWeek,agendaDay'
         },
-        locale: 'fr',
-        firstDay: 1, // Lundi comme premier jour de la semaine
-        events: 'https://path-to-your-events-source.com' // Remplace par ton URL d'événements ou la source API
+        events: [
+          // Exemple d'événements à intégrer ici
+          {
+            title: 'Réservation A',
+            start: '2025-04-01',
+            end: '2025-04-03',
+            description: 'Description de la réservation A',
+            backgroundColor: '#28a745', // Vert pour une réservation validée
+            borderColor: '#28a745'
+          },
+          {
+            title: 'Réservation B',
+            start: '2025-04-10',
+            end: '2025-04-12',
+            description: 'Description de la réservation B',
+            backgroundColor: '#ffc107', // Jaune pour une réservation en attente
+            borderColor: '#ffc107'
+          }
+        ],
+        eventClick: function(event, jsEvent, view) {
+          // Fonctionnalité à ajouter si vous souhaitez interagir avec l'événement
+          alert('Réservation: ' + event.title);
+        }
       });
     });
   </script>
+
 </body>
 </html>
