--- a/serre-chevalier.html
+++ b/serre-chevalier.html
@@ -71,12 +71,4 @@
           }
         ],
         eventClick: function(event, jsEvent, view) {
-          // Fonctionnalité à ajouter si vous souhaitez interagir avec l'événement
-          alert('Réservation: ' + event.title);
-        }
-      });
-    });
-  </script>
-
-</body>
-</html>
+          // Fonctionnalité à ajouter si vous souhaitez interagir avec l'événem
