--- a/serre-chevalier.html
+++ b/serre-chevalier.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendrier de réservation Serre-Chevalier</title>
 
+  <!-- Moment.js -->
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
+
   <!-- FullCalendar CSS -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@3.0.0/dist/fullcalendar.min.css" rel="stylesheet">
   
@@ -37,8 +40,10 @@
   <!-- Le calendrier -->
   <div id="calendar"></div>
 
-  <!-- FullCalendar JS -->
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- FullCalendar JS -->
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.0.0/dist/fullcalendar.min.js"></script>
 
   <script>
@@ -71,4 +76,12 @@
           }
         ],
         eventClick: function(event, jsEvent, view) {
-          // Fonctionnalité à ajouter si vous souhaitez interagir avec l'événem
+          // Fonctionnalité à ajouter si vous souhaitez interagir avec l'événement
+          alert('Réservation: ' + event.title);
+        }
+      });
+    });
+  </script>
+
+</body>
+</html>
