--- a/serre-chevalier.html
+++ b/serre-chevalier.html
@@ -6,7 +6,7 @@
   <title>Calendrier de réservation Serre-Chevalier</title>
 
   <!-- Moment.js -->
-  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
   <!-- FullCalendar CSS -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@3.0.0/dist/fullcalendar.min.css" rel="stylesheet">
