--- a/serre-chevalier.html
+++ b/serre-chevalier.html
@@ -2,82 +2,64 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Calendrier de réservation Serre-Chevalier</title>
-
-  <!-- FullCalendar CSS (version 3.2.0) -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.2.0/fullcalendar.min.css" rel="stylesheet">
-  
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <!-- FullCalendar JS (version 3.2.0) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.2.0/fullcalendar.min.js"></script>
-
+  <!-- CSS de FullCalendar v5 -->
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    h1 {
+      margin: 20px;
       text-align: center;
-      font-size: 2rem;
-      margin-top: 20px;
-      font-weight: bold;
     }
     #calendar {
-      width: 90%;
-      margin: 20px 0;
+      max-width: 900px;
+      margin: 40px auto;
     }
   </style>
 </head>
 <body>
-
-  <!-- Titre du calendrier -->
   <h1>Calendrier de réservation Serre-Chevalier</h1>
-
-  <!-- Le calendrier -->
   <div id="calendar"></div>
 
+  <!-- FullCalendar v5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
+  <!-- Locale français pour FullCalendar v5 -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/locales/fr.js"></script>
   <script>
-    $(document).ready(function() {
-      $('#calendar').fullCalendar({
-        locale: 'fr', // Langue en français
-        firstDay: 1,  // Commence la semaine le lundi
-        header: {
+    document.addEventListener('DOMContentLoaded', function() {
+      var calendarEl = document.getElementById('calendar');
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        locale: 'fr',              // Tout en français
+        initialView: 'dayGridMonth', // Vue par défaut (mois)
+        firstDay: 1,               // La semaine commence le lundi
+        headerToolbar: {
           left: 'prev,next today',
           center: 'title',
-          right: 'month,agendaWeek,agendaDay'
+          right: 'dayGridMonth,timeGridWeek,timeGridDay'
         },
         events: [
           {
             title: 'Réservation A',
             start: '2025-04-01',
             end: '2025-04-03',
-            description: 'Description de la réservation A',
-            backgroundColor: '#28a745', // Vert pour une réservation validée
+            backgroundColor: '#28a745',
             borderColor: '#28a745'
           },
           {
             title: 'Réservation B',
             start: '2025-04-10',
             end: '2025-04-12',
-            description: 'Description de la réservation B',
-            backgroundColor: '#ffc107', // Jaune pour une réservation en attente
+            backgroundColor: '#ffc107',
             borderColor: '#ffc107'
           }
         ],
-        eventClick: function(event, jsEvent, view) {
-          // Fonctionnalité à ajouter si vous souhaitez interagir avec l'événement
-          alert('Réservation: ' + event.title);
+        eventClick: function(info) {
+          alert('Réservation: ' + info.event.title);
         }
       });
+      calendar.render();
     });
   </script>
-
 </body>
 </html>
