--- a/cavalaire.html
+++ b/cavalaire.html
@@ -1,69 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calendrier des réservations</title>
-
-  <!-- CSS de FullCalendar -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.2.0/fullcalendar.min.css" rel="stylesheet" />
-
-  <style>
-    /* Conteneur général */
-    #calendar {
-      max-width: 900px;
-      margin: 0 auto;
-    }
-    /* Titres des calendriers */
-    h2 {
-      text-align: center;
-      font-size: 2.5em;
-      margin-top: 20px;
-      margin-bottom: 15px;
-      font-weight: bold;
-    }
-  </style>
-
-  <!-- jQuery, Moment.js et FullCalendar -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.2.0/fullcalendar.min.js"></script>
-  <!-- Chargement de la locale française pour FullCalendar -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.2.0/locale/fr.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendrier de réservation Cavalaire</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.print.css" rel="stylesheet" media="print">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/locale/fr.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        #calendar {
+            max-width: 900px;
+            margin: 0 auto;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-
-
-
-  <!-- Calendrier de réservation Cavalaire -->
-  <h2>Calendrier de réservation Cavalaire</h2>
-  <div id="calendar-cavalaire"></div>
-
- 
-      // Initialisation du calendrier pour Cavalaire
-      $('#calendar-cavalaire').fullCalendar({
-        locale: 'fr',       // Langue française
-        firstDay: 1,        // La semaine commence le lundi
-        header: {
-          left: 'prev,next today',
-          center: 'title',
-          right: 'month,agendaWeek,agendaDay'
-        },
-        events: [
-          {
-            title: 'Réservation 3',
-            start: '2025-04-20',
-            end: '2025-04-22'
-          },
-          {
-            title: 'Réservation 4',
-            start: '2025-04-25',
-            end: '2025-04-27'
-          }
-        ]
-      });
-    });
-  </script>
-
+    <h1>Calendrier de réservation Cavalaire</h1>
+    <div id="calendar"></div>
+    <script>
+        $(document).ready(function() {
+            $('#calendar').fullCalendar({
+                locale: 'fr',
+                firstDay: 1, // Début de la semaine le lundi
+                editable: false, // Lecture seule
+                events: [
+                    // Ajoute ici les événements de réservation si nécessaire
+                ]
+            });
+        });
+    </script>
 </body>
 </html>
