--- a/serre-chevalier.html
+++ b/serre-chevalier.html
@@ -1,64 +1,62 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Calendrier de réservation Serre-Chevalier</title>
-  <!-- CSS de FullCalendar v5 -->
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      text-align: center;
-    }
-    #calendar {
-      max-width: 900px;
-      margin: 40px auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendrier de réservation Serre-Chevalier</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.print.min.css" media="print">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/locale/fr.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        #calendar {
+            max-width: 900px;
+            margin: 0 auto;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-  <h1>Calendrier de réservation Serre-Chevalier</h1>
-  <div id="calendar"></div>
-
-  <!-- FullCalendar v5 JS et locale française -->
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/locales/fr.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var calendarEl = document.getElementById('calendar');
-      var calendar = new FullCalendar.Calendar(calendarEl, {
-        locale: 'fr',              // Tout en français
-        initialView: 'dayGridMonth', // Vue mensuelle par défaut
-        firstDay: 1,               // La semaine commence le lundi
-        headerToolbar: {
-          left: 'prev,next today',
-          center: 'title',
-          right: 'dayGridMonth,timeGridWeek,timeGridDay'
-        },
-        events: [
-          {
-            title: 'Réservation A',
-            start: '2025-04-01',
-            end: '2025-04-03',
-            backgroundColor: '#28a745',
-            borderColor: '#28a745'
-          },
-          {
-            title: 'Réservation B',
-            start: '2025-04-10',
-            end: '2025-04-12',
-            backgroundColor: '#ffc107',
-            borderColor: '#ffc107'
-          }
-        ],
-        eventClick: function(info) {
-          alert('Réservation: ' + info.event.title);
-        }
-      });
-      calendar.render();
-    });
-  </script>
+    <h1>Calendrier de réservation Serre-Chevalier</h1>
+    <div id="calendar"></div>
+    
+    <script>
+        $(document).ready(function() {
+            $('#calendar').fullCalendar({
+                locale: 'fr',
+                firstDay: 1,
+                header: {
+                    left: 'prev,next today',
+                    center: 'title',
+                    right: 'month,agendaWeek,agendaDay'
+                },
+                events: [
+                    // Exemple d'événements, remplace-les par tes propres événements
+                    {
+                        title: 'Réservé',
+                        start: '2025-04-10',
+                        end: '2025-04-15',
+                        color: 'red'
+                    },
+                    {
+                        title: 'Disponible',
+                        start: '2025-04-20',
+                        end: '2025-04-25',
+                        color: 'green'
+                    }
+                ]
+            });
+        });
+    </script>
 </body>
 </html>
