--- a/serre-chevalier.html
+++ b/serre-chevalier.html
@@ -1,62 +1,95 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendrier de réservation Serre-Chevalier</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.print.min.css" media="print">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/locale/fr.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-        }
-        #calendar {
-            max-width: 900px;
-            margin: 0 auto;
-        }
-        h1 {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Calendrier de réservation Serre-Chevalier</title>
+  <!-- CSS de FullCalendar v5 -->
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      text-align: center;
+    }
+    #calendar {
+      max-width: 900px;
+      margin: 40px auto;
+    }
+    h1 {
+      font-size: 30px;
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Calendrier de réservation Serre-Chevalier</h1>
-    <div id="calendar"></div>
-    
-    <script>
-        $(document).ready(function() {
-            $('#calendar').fullCalendar({
-                locale: 'fr',
-                firstDay: 1,
-                header: {
-                    left: 'prev,next today',
-                    center: 'title',
-                    right: 'month,agendaWeek,agendaDay'
-                },
-                events: [
-                    // Exemple d'événements, remplace-les par tes propres événements
-                    {
-                        title: 'Réservé',
-                        start: '2025-04-10',
-                        end: '2025-04-15',
-                        color: 'red'
-                    },
-                    {
-                        title: 'Disponible',
-                        start: '2025-04-20',
-                        end: '2025-04-25',
-                        color: 'green'
-                    }
-                ]
-            });
+  <h1>Calendrier de réservation Serre-Chevalier</h1>
+  <div id="calendar"></div>
+
+  <!-- FullCalendar v5 JS et Locale Français -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/locales/fr.js"></script>
+  <script>
+    // REMARQUE : Remplace les valeurs ci-dessous par tes informations réelles !
+    const appBJ1MeKJnAOKwoy = 'appXXXXXXXXX';       // Ton ID de base (ex. "app12345678")
+    const Réservations = 'Réservations';      // Le nom exact de ta table (ex. "Réservations")
+    const patbjI2qZvUCy4kq3 = 'YOUR_API_TOKEN';     // Ton token d'accès Airtable
+
+    // Construction de l'URL de l'API Airtable
+    const apiUrl = `https://api.airtable.com/v0/${appBJ1MeKJnAOKwoy}/${encodeURIComponent(Réservations)}`;
+
+    // Fonction pour récupérer les réservations depuis Airtable
+    async function fetchReservations() {
+      try {
+        const response = await fetch(apiUrl, {
+          method: 'GET',
+          headers: {
+            'Authorization': `Bearer ${patbjI2qZvUCy4kq3}`,
+            'Content-Type': 'application/json'
+          }
         });
-    </script>
+        const data = await response.json();
+        return data.records;
+      } catch (error) {
+        console.error("Erreur lors de la récupération des réservations :", error);
+      }
+    }
+
+    // Fonction pour formater les enregistrements d'Airtable pour FullCalendar
+    function formatEvents(records) {
+      return records.map(record => {
+        // Assure-toi que les noms des champs correspondent exactement aux noms utilisés dans ta table Airtable
+        return {
+          title: record.fields["Nom"] + " (" + record.fields["Statut de la demande de la demande"] + ")",
+          start: record.fields["Date de début"],
+          end: record.fields["Date de fin"]
+        };
+      });
+    }
+
+    // Initialisation du calendrier FullCalendar et chargement des réservations
+    document.addEventListener('DOMContentLoaded', async function() {
+      const records = await fetchReservations();
+      const events = formatEvents(records || []);
+
+      const calendarEl = document.getElementById('calendar');
+      const calendar = new FullCalendar.Calendar(calendarEl, {
+        locale: 'fr',
+        initialView: 'dayGridMonth',
+        firstDay: 1,  // La semaine commence par lundi
+        headerToolbar: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        },
+        events: events,
+        eventClick: function(info) {
+          alert("Réservation : " + info.event.title);
+        }
+      });
+      calendar.render();
+    });
+  </script>
 </body>
 </html>
+
